fixed card text alignment

--- a/css/media.css
+++ b/css/media.css
@@ -217,7 +217,7 @@
     text-align: center;
   }
   .github-links {
-    margin-top: 0.2rem;
+    margin-top: 5rem;
   }
   .project-content-text {
     display: none;
